Add comprehensive donor data integration system
- Create donor data models and MongoDB schemas
- Implement CSV data import service with data cleaning
- Add donor management API routes with filtering and pagination
- Create comprehensive donor dashboard component
- Add data import script for CSV processing
- Integrate donor management into main application
- Update navigation and access control for admin users

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "watch": "tsc --watch",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "import-data": "node scripts/importData.js"
   },
   "keywords": [
     "healthcare",
@@ -24,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
