--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,17 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "ts-node src/index.ts",
     "build": "tsc",
+    "import-donors": "node scripts/importDonors.js",
+    "create-test-patient": "node scripts/createTestPatient.js",
+    "create-test-doctor": "node scripts/createTestDoctor.js",
+    "check-db": "node scripts/checkDatabase.js",
+    "show-users": "node scripts/showAllUsers.js",
     "watch": "tsc --watch",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
-    "import-data": "node scripts/importData.js"
+    "lint:fix": "eslint src/**/*.ts --fix"
   },
   "keywords": [
     "healthcare",
@@ -25,7 +29,6 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "csv-parser": "^3.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
